--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <!-- Footer -->
   <footer class="bg-secondary text-white text-center py-6">
-    <p>&copy; 2025 Pamban Bridge Heritage. All rights reserved.</p>
+    <p>Celebrating Pamban Bridge Heritage | BAPS Anand</p>
   </footer>
 
   <!-- Interactive Scroll Effect -->
